--- a/www/index.html
+++ b/www/index.html
@@ -28,14 +28,10 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/OrderStateSvc.js"></script>
+    <script src="js/Orders/orders.js"></script>
+    <script src="js/Orders/OrderModel.js"></script>
+    <script src="js/Vendor/vendor.js"></script>
     <script src="js/Resources.js"></script>
-    <script src="js/Find/LocationSearchCtrl.js"></script>
-    <script src="js/Find/VendorSearchCtrl.js"></script>
-    <script src="js/Find/VendorDetailsCtrl.js"></script>
-    <script src="js/Resources.js"></script>
-    <script src="js/Orders/OrderCtrl.js"></script>
-    <script src="js/Orders/OrderHistoryCtrl.js"></script>
   </head>
 
   <body ng-app="drinkon">
