--- a/www/index.html
+++ b/www/index.html
@@ -28,15 +28,33 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/Orders/orders.js"></script>
-    <script src="js/Orders/OrderModel.js"></script>
-    <script src="js/Vendor/vendor.js"></script>
-    <script src="js/Resources.js"></script>
+    <script src="js/orders/orders.js"></script>
+    <script src="js/orders/orderSvc.js"></script>
+    <script src="js/vendor/vendor.js"></script>
+    <script src="js/vendor/locationSvc.js"></script>
+    <script src="js/vendor/vendorSvc.js"></script>
+    <script src="js/vendor/productSvc.js"></script>
   </head>
 
   <body ng-app="drinkon">
 
-    <ion-nav-view></ion-nav-view>
+    <ion-side-menus>
+        <ion-side-menu side="left">
+            <ion-header-bar class="bar-dark">
+                <h1 class="title">Options</h1>
+            </ion-header-bar>
+            <ion-content>
+                <div class="list">
+                    <a menu-close class="item" ui-sref="app.home">
+                        Homepage
+                    </a>
+                </div>
+            </ion-content>
+        </ion-side-menu>
+        <ion-side-menu-content>
+            <ion-nav-view></ion-nav-view>
+        </ion-side-menu-content>
+    </ion-side-menus>
 
   </body>
 
