--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,8 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
+    <script src="lib/angular-http-auth/src/http-auth-interceptor.js"></script>
+    <script src="lib/angular-local-storage/dist/angular-local-storage.js"></script>
 
     <!-- lodash -->
     <script src="lib/lodash/dist/lodash.js"></script>
@@ -28,6 +30,9 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/appCtrl.js"></script>
+    <script src="js/auth/loginCtrl.js"></script>
+    <script src="js/auth/authSvc.js"></script>
     <script src="js/orders/orders.js"></script>
     <script src="js/orders/orderSvc.js"></script>
     <script src="js/vendor/vendor.js"></script>
@@ -36,7 +41,7 @@
     <script src="js/vendor/productSvc.js"></script>
   </head>
 
-  <body ng-app="drinkon">
+  <body ng-app="drinkon" ng-controller="appCtrl">
 
     <ion-side-menus>
         <ion-side-menu side="left">
@@ -47,6 +52,12 @@
                 <div class="list">
                     <a menu-close class="item" ui-sref="app.home">
                         Homepage
+                    </a>
+                    <a menu-close class="item" ui-sref="app.register" ng-show="!getCurrentUser()">
+                        Register
+                    </a>
+                    <a menu-close class="item" ui-sref="app.logout" ng-show="!!getCurrentUser()">
+                        Logout
                     </a>
                 </div>
             </ion-content>
