--- a/www/index.html
+++ b/www/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>drinkon</title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poiret+One">
-    <link href="css/style.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+    <!-- compiled css output -->
+    <link href="css/drinkon.app.css" rel="stylesheet">
+    <link href="css/site.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -32,6 +30,7 @@
     <script src="js/app.js"></script>
     <script src="js/appCtrl.js"></script>
     <script src="js/auth/loginCtrl.js"></script>
+    <script src="js/auth/popoverCtrl.js"></script>
     <script src="js/auth/authSvc.js"></script>
     <script src="js/orders/orders.js"></script>
     <script src="js/orders/orderSvc.js"></script>
@@ -44,20 +43,15 @@
   <body ng-app="drinkon" ng-controller="appCtrl">
 
     <ion-side-menus>
-        <ion-side-menu side="left">
-            <ion-header-bar class="bar-dark">
+        <ion-side-menu side="left" width="220" class="side-menu">
+            <ion-header-bar class="bar-calm">
                 <h1 class="title">Options</h1>
             </ion-header-bar>
             <ion-content>
                 <div class="list">
-                    <a menu-close class="item" ui-sref="app.home">
+                    <a class="item item-icon-left" ui-sref="app.home" menu-close>
+                        <i class="icon ion-home"></i>
                         Homepage
-                    </a>
-                    <a menu-close class="item" ui-sref="app.register" ng-show="!getCurrentUser()">
-                        Register
-                    </a>
-                    <a menu-close class="item" ui-sref="app.logout" ng-show="!!getCurrentUser()">
-                        Logout
                     </a>
                 </div>
             </ion-content>
