Added image files to local folder

--- a/www/index.html
+++ b/www/index.html
@@ -56,9 +56,13 @@
                         <i class="icon ion-home"></i>
                         Homepage
                     </a>
-                    <a class="item item-icon-left" ng-click="goToVenues()" menu-close>
+                    <a class="item item-icon-left" ui-sref="app.vendor.list" menu-close>
                         <i class="icon ion-wineglass"></i>
                         Venues
+                    </a>
+                    <a class="item item-icon-left" ui-sref="app.orders" menu-close>
+                        <i class="icon ion-pricetags"></i>
+                        Orders
                     </a>
                 </div>
             </ion-content>
