first attempt at push mesages

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
     <script src="js/notification/notificationSvc.js"></script>
   </head>
 
-  <body ng-app="drinkon" ng-controller="appCtrl">
+  <body ng-app="drinkon" ng-controller="appCtrl" onload="init()">
 
     <ion-side-menus>
         <ion-side-menu side="left" width="220" class="side-menu">
