--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <script src="js/vendor/locationSvc.js"></script>
     <script src="js/vendor/vendorSvc.js"></script>
     <script src="js/vendor/productSvc.js"></script>
+    <script src="js/notification/notificationSvc.js"></script>
   </head>
 
   <body ng-app="drinkon" ng-controller="appCtrl">
